Got the saving of the limerick to the database to work

--- a/css/page.css
+++ b/css/page.css
@@ -16,7 +16,7 @@ a:active  {color:blue;}
 
 body, html
 {
-    background-color:lightgrey;
+    background-color:Beige;
 }
 
 form#authenticateFormId
